# factorio-mod-template

./: .gitattributes  .gitignore  .releaserc  Cargo.toml  LICENSE  README.md  info.json
.github/workflows/: release.yml
locale/en/: locale.cfg
src/: lib.rs
